syntax = "proto3";

package gophkeeper;

option go_package = "internal/domain/entity";

message SecretLoginPasswordPayload {
    string login = 1;
    string password = 2;
}

message SecretTextPayload {
    string text = 1;
}

message SecretBinaryPayload {
    bytes binary = 1;
}

message SecretBankingCardPayload {
    string CardNumber = 1;
    string OwnerName = 2;
    string ValidThru = 3;
    string CVV = 4;
}

// Структура для сериализации/десериализации и шифрования
message SecretPayload {
  oneof secret {
      SecretLoginPasswordPayload login_password = 1;
      SecretTextPayload text = 2;
      SecretBinaryPayload binary = 3;
      SecretBankingCardPayload banking_card = 4;
  }
}
